Fix #7317: completion menu truncated in Container Settings dialog

--- a/form-builder/jvm/src/main/assets/forms/orbeon/builder/resources/form-builder.less
+++ b/form-builder/jvm/src/main/assets/forms/orbeon/builder/resources/form-builder.less
@@ -1348,7 +1348,8 @@ body.orbeon {
     // When we remove the `position: relative` in `grid.less`, we can remove this as well
     .fb-dialog-control-settings,
     .fb-dialog-email-settings,
-    .fb-dialog-http-services {
+    .fb-dialog-http-services,
+    .fb-dialog-container-settings {
         .xbl-fr-grid .fr-grid:not(.fr-grid-css) .fr-grid-body .fr-grid-td {
             position: static;
         }
